styles/scss/index.scss
@import "./fonts.scss";
@import "./components/slideshow.scss";

*{
    padding:0;
    margin:0;
    box-sizing: border-box;
}

html{
    scroll-behavior:smooth
}

body{
    scroll-snap-type: y mandatory;
    font-family: 'Open Sans', 'Inter', sans-serif;

    header{
        position: fixed;
        display: flex;
        width: 100%;
        justify-content: space-between;
        align-items: center;
        padding: 10px 35px;
        z-index: 2;
        transition: all .3s linear;
        color: white;

        &.scrolled{
            background: rgba(0,0,0, .6);
        }

        .logo{
            font-family: "Broadway";
            text-transform: uppercase;
            font-size: 45px;
        }

        nav{
            .nav-list{
                list-style-type: none;
                display: flex;
                align-items: center;
                .nav-item{
                    display: inline-block;
                    margin: 0 10px;
                    text-transform: uppercase;
                    cursor: pointer;
                    padding: 0 20px;

                    &.active{
                        font-weight: 700;
                    }

                    &.nav-item-relative{
                        position: relative;

                        .language-box{
                            position: absolute;
                            color: black;
                            background: white;
                            right: 10px;
                            top: 50px;
                            padding: 20px;
                            width: 201px;
                            cursor: auto;
                            display: none;

                            &.show{
                                display: inline-block;
                            }

                            select{
                                padding: 3px 5px;
                                margin: 10px 0;
                            }

                            button{
                                padding: 7px 25px;
                                border: none;
                                cursor: pointer;
                            }

                            .arrow-up{
                                position: absolute;
                                right: 12px;
                                top: -18px;
                            }
                        }
                    }
                }
            }
        }
    }

    section{
        scroll-snap-align: start;
        min-height:100vh;
        //max-height: 100vh;

        &.hero{
            position: relative;
            background-image: url("https://via.placeholder.com/2400x1600");
            background-position: center center;
            background-repeat: no-repeat;
            background-size: cover;

            .hero-img{
                width: 100%;
                height: 100%;
                object-fit: cover;
                object-position: center;
            }

            .hero-meta{
                position: absolute;
                top: 50%;
                left: 40px;
                transform: translate(0, -50%);
                color: white;
                text-transform: uppercase;

                .hero-title{
                    font-size: 60px;
                    font-weight: 800;
                }

                .hero-text{
                    padding-top: 20px;
                }

                .hero-button{
                    font-size: 20px;
                    padding: 15px 54px;
                    border: none;
                    background-color: #70FFD4;
                    margin-top: 30px;
                    cursor: pointer;
                }
            }

            .down-button{
                position: absolute;
                bottom: 60px;
                left: calc(50% - 25px);
                background-image: url("/public/img/down-btn.svg");
                background-position: center;
                background-repeat: no-repeat;
                background-size: cover;
                width: 50px;
                height: 50px;
                cursor: pointer;
            }
        }

        &.big-img{
            display: flex;
            justify-content: center;
            align-items: center;

            img{
                padding: 40px 20px;
                object-fit: cover;
                max-width: calc(90% + 40px);
            }
        }

        &.info{
            display: flex;
            align-items: center;
            justify-content: center;
            .container {
                display:grid;
                grid-template-areas: 'img1 bigText bigText''img2 info1 info2';
                grid-auto-columns: auto 1fr 1fr;
                align-items: center;
                gap:1em;
                column-gap: 50px;
                padding: 80px 67px;
                img:last-of-type{
                    grid-area:img2;
                }
                h3 {
                    grid-area: bigText;
                    font-size: 3em;
                }

                .info-text-container{
                    width: 100%;
                    height: 100%;
                    padding-top: 10px;
                    border-top: 1px solid black;
                    .info-text{

                    }
                }
            }
        }

        &.three-split{
            display: grid;
            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
            grid-template-rows: 1fr;

            .split{
                height: 100vh;
                position: relative;

                .split-title{
                    position: absolute;
                    bottom: 50px;
                    left: 60px;
                    font-size: 39px;
                    font-weight: bold;
                }

                .split-text{
                    position: absolute;
                    top: 45px;
                    left: 60px;
                    font-size: 32px;
                    font-weight: bold;
                }

                img{
                    width: 100%;
                    height: 100%;
                    object-fit: cover;
                    object-position: center;
                }
            }
        }

        &.small-slideshow{
            display: flex;
            flex-direction: column;
            justify-content: center;
            .slideshow-container{
                padding: 40px 0 40px 60px;
            }
        }

        &.two-split{
            display: flex;
            justify-content: center;
            align-items: center;

            .grid-container{
                display: grid;
                grid-template-columns: repeat(2, minmax(min-content, max-content));
                grid-template-rows: minmax(min-content, max-content) minmax(min-content, max-content);
                grid-column-gap: 45px;
                grid-row-gap: 50px;
                padding: 80px;
                    
                .grid-first { grid-area: 1 / 1 / 2 / 3; }
                .grid-second { grid-area: 2 / 1 / 3 / 2; }
                .grid-third { grid-area: 2 / 2 / 3 / 3; }

                .grid-image{
                    img{
                        width: 100%;
                    }
                }

                .title{
                    display: flex;
                    align-items: end;

                    h3{
                        font-size: 57px;
                        font-weight: normal;
                    }
                }
            }
        }

        &.half-split{
            display: flex;
            flex-direction: row;
            div{
                width: 50%;
                background-color: black;

                .split-img{
                    width: 100%;
                    height: 100%;
                    object-fit: cover;
                }

                p{
                    font-size: 120px;
                    padding: 40px;
                    color: white;
                }
            }
        }

        &.image-slider{
        }
    }

    footer{
        background: black;
        height: 100vh;
        display: flex;
        justify-content: center;
        align-items: center;

        h1{
            font-weight: bold;
            font-size: 120px;
            color: white;
        }
    }
}

